--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -11,7 +11,7 @@
 	<form action="." method="post">
 		    {% csrf_token %}
             {{ form.as_p }}
-    <input type="button" value="OK" id="enviar">
+    <input type="submit" value="OK" id="enviar">
 	</form>
 
 	<!-- {{message}} -->
@@ -25,18 +25,18 @@
     </ul>
 
 <script>
-    $(document).ready(function() {
-
-        $("#enviar").on("click", function(){
-            $.ajax({
-              type: "POST",
-              url: '/',
-              data: $('#id_message').val(),
-              dataType: 'json'
-            });
-        });
-
-    });
+    // $(document).ready(function() {
+    //
+    //     $("#enviar").on("click", function(){
+    //         $.ajax({
+    //           type: "POST",
+    //           url: '/',
+    //           data: $('#id_message').val(),
+    //           dataType: 'json'
+    //         });
+    //     });
+    //
+    // });
 </script>
 </body>
 </html>
