--- a/chatbot/app/templates/base.html
+++ b/chatbot/app/templates/base.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <h1>Converse com o Cadu!</h1>
-    <img src="{% static "img/Boneco-Cadu.png" %}" />
+    <!--<img src="{% static "img/Boneco-Cadu.png" %}" />-->
 
-
+    <img src="{% static "img/Boneco-Cadu-Frente2.png" %}" alt="My image" height="200px"/>
     <div class="card">
         <div class="card-body">
             <ul class="list-group list-group-flush">
